# OpenNOW

./: .clangd  .gitignore  AGENTS.md  AppImageBuilder.yml  Makefile  README.md  _read.js  _read2.js  _read3.js  _read4.js  _read5.js  crowdin.yml  flake.nix  package.json  result  tmp.js
.github/: CONTRIBUTING.md
.github/scripts/: merge-mac-update-metadata.mjs  set-opennow-version.mjs
.github/workflows/: auto-build.yml  codeql.yml  native-macos.yml  native-streamer-build.yml  native-streamer-windows.yml  opennow-rewrite-bootstrap.yml  opennow-stable-build.yml  opennow-stable-release.yml  release.yml  windows-portable-build.yml
android/: .gitignore  README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/release/: output-metadata.json
android/app/src/main/cpp/: CMakeLists.txt  opennow_native.cpp
docs/: .~lock.streamer-investigation.md#  cross-platform-roadmap.md  development.md  gstreamer-bundling.md
ios/OpenNOWiOS/: README.md
ios/OpenNOWiOS/OpenNOWiOS/: BrowseView.swift  ContentView.swift  HomeView.swift  Info.plist  LibraryView.swift  LoginView.swift  NativeStreamerView.swift  OpenNOWStore.swift  OpenNOWiOSApp.swift  PrintedWasteQueueView.swift  QueueActivityAttributes.swift  SessionView.swift  (+4 more)
ios/OpenNOWiOS/OpenNOWiOS.xcodeproj/: project.pbxproj
locales/: de.json  en.json  ja.json  ko.json  nl.json  pl.json  ro.json  ru.json
native/: README.md
native/core/: CMakeLists.txt
native/core/include/opennow/: input_protocol.hpp  open_now_core.hpp  sdp.hpp  service_builders.hpp  service_clients.hpp  service_protocol.hpp  service_transport.hpp  services.hpp  settings.hpp  stream_client.hpp  types.hpp
native/core/src/: input_protocol.cpp  open_now_core.cpp  sdp.cpp  service_builders.cpp  service_clients.cpp  service_protocol.cpp  service_transport.cpp  settings.cpp  stream_client.cpp
native/core/tests/: test_core.cpp
native/docs/: behavior-inventory.md  release-readiness.md  ui-migration.md
native/macos/: README.md  build-app.sh
native/opennow-streamer/: Cargo.toml  README.md  build.rs
native/opennow-streamer/src/: backend.rs  gstreamer_backend.rs  gstreamer_config.rs  gstreamer_cursor.rs  gstreamer_input.rs  gstreamer_liveness.rs  gstreamer_pipeline.rs  gstreamer_platform.rs  input.rs  linux_cursor.rs  linux_display_session.rs  linux_wayland_renderer.rs  main.rs  protocol.rs  sdp.rs  shortcuts.rs
native/scripts/: validate-macos-release.sh
opennow-native-streamer/: CMakeLists.txt  README.md
opennow-native-streamer/src/: main.cpp
opennow-rewrite/: CMakeLists.txt  README.md
opennow-rewrite/apps/desktop/: main.cpp
opennow-rewrite/docs/: ARCHITECTURE.md  LOGIN_REFERENCE.md
opennow-rewrite/include/opennow/auth/: login.hpp
opennow-rewrite/include/opennow/core/: app.hpp
opennow-rewrite/platform/linux/: README.md
opennow-rewrite/platform/macos/: README.md
opennow-rewrite/platform/raspberrypi/: README.md
opennow-rewrite/platform/windows/: README.md
opennow-rewrite/src/auth/: login.cpp
opennow-rewrite/src/core/: app.cpp
opennow-rewrite/tests/: login_smoke.cpp
opennow-stable/: README.md  capacitor.config.ts  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vitest.config.ts
opennow-stable/android/: capacitor.settings.gradle  gradle.properties
opennow-stable/docs/: IPC_INVENTORY.md
opennow-stable/scripts/: after-sign-mac.mjs  build-macos-embedded-renderer.mjs  build-native-streamer.mjs  bundle-gstreamer-runtime.mjs  dev.mjs  ensure-electron-installed.mjs  ensure-electron.mjs  run-tests.mjs
opennow-stable/tests/: hdr-logic.test.ts  session-polling.test.ts
opennow-streamer/: Cargo.toml  GSTREAMER_SETUP.md  README.md
opennow-streamer/reverse/: win.md
opennow-streamer/scripts/: bundle-gstreamer.ps1  dev.ps1  run.ps1  test-decoders.ps1
opennow-streamer/src/: input.rs  lib.rs  main.rs  media.rs  profiling.rs  sdp.rs  session.rs  window.rs
qt/: CMakeLists.txt
qt/src/: OpnQtAppWindow.cpp  OpnQtAppWindow.h  OpnQtAuthService.cpp  OpnQtAuthService.h  OpnQtCatalogView.cpp  OpnQtCatalogView.h  OpnQtGameService.cpp  OpnQtGameService.h  OpnQtSessionManager.cpp  OpnQtSessionManager.h  OpnQtSignalingClient.cpp  OpnQtSignalingClient.h  OpnQtStreamPreferences.cpp  OpnQtStreamPreferences.h  OpnQtStreamTypes.h  OpnQtWebRtcStreamSession.cpp  OpnQtWebRtcStreamSession.h  main.cpp
scripts/: build-libwebrtc-sdk.sh  install.sh  release-mac.sh
src/: OPNAppDelegate.mm
src/auth/: OPNAuthService.h  OPNAuthService.mm
src/common/: OPNAuthTypes.h  OPNColorTokens.h  OPNCoreAnimationCoordinator.mm  OPNGameTypes.h  OPNUIHelpers.h  OPNUIHelpers.mm
src/games/: OPNGameService.h  OPNGameService.mm
src/streaming/: OPNInputProtocol.h  OPNInputProtocol.mm  OPNLibWebRTCStreamSession.h  OPNLibWebRTCStreamSession.mm  OPNSessionManager.h  OPNSessionManager.mm  OPNSignalingClient.h  OPNSignalingClient.mm  OPNStreamBackend.h  OPNStreamBackend.mm  OPNStreamPreferences.h  OPNStreamPreferences.mm  OPNStreamRecordingManager.mm  OPNStreamSession.h  OPNStreamTypes.h  OPNStreamView.h  OPNStreamView.mm  OPNStreamViewController.h  OPNStreamViewController.mm
src/views/: OPNBackdropView.mm  OPNEmailEntryView.mm  OPNGameCardView.h  OPNGameCardView.mm  OPNGameCatalogView.h  OPNGameCatalogView.mm  OPNLoadingView.mm  OPNSettingsView.h  OPNSettingsView.mm  OPNStoreView.mm
vendor-analysis/: VENDOR_CSS.md  VENDOR_FEATURES.md  VENDOR_HUMAN_SUMMARY.md  VENDOR_INDEX.md  VENDOR_REPORT.md  VENDOR_STRINGS_01_598.df12ac4ff70f2238.js.md  VENDOR_STRINGS_02_626.e6f5b98204eade60.js.md  VENDOR_STRINGS_03_667.8b84dcfc99bf931e.js.md  VENDOR_STRINGS_04_689.981ba519cbc17084.js.md  VENDOR_STRINGS_05_77.1882f9ae7a439de5.js.md  VENDOR_STRINGS_06_862.5162a13553ab0766.js.md  VENDOR_STRINGS_07_923.4d491d740bdd7d37.js.md  VENDOR_STRINGS_08_main.81a2d6165286131d.js.md  VENDOR_STRINGS_09_manifest.webmanifest.md  VENDOR_STRINGS_10_polyfills.0119af3bec0a10f7.js.md  VENDOR_STRINGS_11_runtime.de302b1b971bfb57.js.md  VENDOR_STRINGS_12_styles.b163082243582a97.css.md  VENDOR_STRINGS_13_vendor.0087fab5da9f1091.js.md
(+335 files in other folders)
