[package]
name = "opennow-streamer"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = []
gstreamer = [
    "dep:gstreamer",
    "dep:gstreamer-sdp",
    "dep:gstreamer-video",
    "dep:gstreamer-webrtc",
    "gstreamer-webrtc/v1_22",
]

[dependencies]
base64 = "0.22"
gstreamer = { version = "0.25.1", optional = true }
gstreamer-sdp = { version = "0.25.0", optional = true }
gstreamer-video = { version = "0.25.0", optional = true }
gstreamer-webrtc = { version = "0.25.0", optional = true }
libc = "0.2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
[target.'cfg(target_os = "linux")'.dependencies]
wayland-client = { version = "0.31.11", features = ["system"] }
wayland-protocols = { version = "0.31.2", features = ["client", "staging", "unstable"] }
wayland-sys = "0.31.11"
